Correct alignment of grid item's box!

--- a/demo/demo.scss
+++ b/demo/demo.scss
@@ -206,6 +206,14 @@ a {
 
 .grid .item {
   position: relative;
+  
+  .box {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   padding: 1vw;
   background-position:  left bottom;
   background-size: 150% 100%;
